mysql-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    name: mysql
  namespace: demo
spec:
  selector:
    matchLabels:
      name: mysql
  template:
    metadata:
      labels:
        name: mysql
    spec:
      containers:
      - image: mysql:5.6
        name: mysql
        resources:
          requests:
            cpu: "20m"
            memory: "55M"
        ports: 
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - mountPath: /srv/nfs/mydata
          name: mysql-pvc
      volumes:
      - name: mysql-pvc
        persistentVolumeClaim:
          claimName: mysql-pvc
      restartPolicy: Always
---

kind: Service
apiVersion: v1
metadata:
  namespace: demo
  name: mysql-svc
spec:
  selector:
    name: mysql
  type: ClusterIP
  ports:
  - name: mysql
    port: 3306
    targetPort: 3306
