wp-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: wp
  namespace: demo
  labels:
    name: wp
spec:
  selector:
    matchLabels:
      name: wp
  template:
    metadata:
      labels:
        name: wp
    spec:
      containers:
      - image: wordpress:4.8-apache
        name: wp
        resources:
          requests:
            cpu: "20m"
            memory: "55Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - mountPath: /var/www/html
          name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: wp-pvc
      restartPolicy: Always
---

apiVersion: v1
kind: Service
metadata:
  name:  wp-svc
  namespace: demo
spec:
  selector:
    name: wp
  type:  ClusterIP
  ports:
  - name:  http
    port:  80
    targetPort:  80
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Frame-Options: Deny";
      more_set_headers "X-Xss-Protection: 1; mode=block";
      more_set_headers "X-Content-Type-Options: nosniff";
  name: wp-ingress
  namespace: demo
spec:
  rules:
    - host: wp.agam.local
      http:
        paths:
        - backend:
            service:
              name: wp-svc
              port:
                number: 80
          path: /
          pathType: ImplementationSpecific
